fixed modal container height on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -213,7 +213,7 @@ main {
     background-color: #fefefe;
     border-radius: 1rem;
     width: 100%;
-    height: 100%;
+    height: calc(100% + 3%);
     padding: 2rem 2rem;
     overflow-y: scroll;
 
